tests/ui/consts/issue-94675.stderr
error[E0015]: cannot call non-const fn `Vec::<u32>::len` in constant functions
  --> $DIR/issue-94675.rs:11:27
   |
LL |         self.bar[0] = baz.len();
   |                           ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/issue-94675.rs:11:17
   |
LL |         self.bar[0] = baz.len();
   |                 ^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
